<resources>
    <string name="app_name">PoorNoMore</string>
    <string name="tab_text_1">Statistics</string>
    <string name="tab_text_2">Expenses</string>
    <string name="tab_text_3">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="icon01">Transportation Icon</string>
    <string name="icon02">Groceries Icon</string>
    <string name="icon03">Liquor Icon</string>
    <string name="icon04">Restaurants Icon</string>
    <string name="icon05">Clothing Icon</string>
    <string name="icon06">Other icon</string>
    <string name="icon07">Profile Icon</string>
    <string name="icon08">Email icon</string>
    <string name="icon09">income icon</string>
    <string name="transportation">Transportation</string>
    <string name="groceries">Groceries</string>
    <string name="liquor">Liquor</string>
    <string name="restaurants">Restaurants</string>
    <string name="clothing">Clothing</string>
    <string name="other">Other</string>
    <string name="txtEmail">Email</string>
    <string name="txtName">Name</string>
    <string name="txtIncome">Monthly Income</string>
    <string name="txtDate">Select Date</string>
    <string name="txtCategory">Choose Category</string>
    <string name="txtAmt">Enter Amount</string>
    <string name="logoutBtn">Logout</string>
    <string name="Categories">Categories</string>
    <string name="savings">Savings</string>
    <string name="totalexpenses">Total Expenses</string>
    <string name="dayLimit">Daily Limit:</string>
    <string name="txtNewAccount">New Account</string>
    <string name="txtCreateAccount">Create Account</string>
    <string name="txtSignin">Sign in</string>
    <string name="txtDontHaveAccount">Dont"'"t have an account?</string>
    <string name="txtSignup">Sign Up</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="transfer">Transfer</string>
    <string name="addSavings">Add new Savings Account</string>
    <string name="hintAddSavings">New Savings Account Name</string>
    <string name="hintAddAmount">Enter Amount to transfer</string>
    <string name="add">Add</string>

        <string-array name="planets_array">
            <item>Mercury</item>
            <item>Venus</item>
            <item>Earth</item>
            <item>Mars</item>
            <item>Jupiter</item>
            <item>Saturn</item>
            <item>Uranus</item>
            <item>Neptune</item>
        </string-array>
    <string name="txtUncategorized">Uncategorized</string>

</resources>
