<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenbackground1"
    tools:context=".CreateAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradient3">

        <LinearLayout
            android:layout_margin="20dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/logo2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo_white_350" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txtNewAccount"
                android:textSize="25sp" />

        <!-- Name -->
        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/signin_roundedcorners">

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:drawableLeft="@drawable/usericon"
                android:drawablePadding="15dp"
                android:hint="@string/txtName"
                android:inputType="text"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="23sp" />

        </LinearLayout>

        <!-- Email Input -->
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/signin_roundedcorners">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:drawableLeft="@drawable/emailicon"
                android:drawablePadding="15dp"
                android:hint="@string/txtEmail"
                android:inputType="textEmailAddress"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="23sp" />

        </LinearLayout>

        <!-- Monthly Income -->
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/signin_roundedcorners">

            <EditText
                android:id="@+id/txtIncome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:drawableLeft="@drawable/dollar"
                android:drawablePadding="15dp"
                android:hint="@string/txtIncome"
                android:inputType="numberDecimal"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="23sp" />

        </LinearLayout>

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/signin_button_roundedcorners"
                android:text="@string/txtCreateAccount"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>