<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/greenbackground1"
    tools:context=".SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradient3">

        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="Poor No More"
                android:textColor="#ffffff"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_marginTop="150dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/signin_roundedcorners"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtSignin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:drawableLeft="@drawable/usericon"
                    android:drawablePadding="15dp"
                    android:hint="@string/txtEmail"
                    android:inputType="textEmailAddress"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:textSize="22sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/signin_button_roundedcorners"
                android:text="@string/txtSignin"
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtDontHaveAccount"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/btnSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/txtSignup"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>