<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/choosecategory_roundedcorners"
    android:layout_gravity="center"
    android:layout_width="320dp"
    android:layout_height="480dp"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Categories"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@drawable/signin_button_roundedcorners"
        android:layout_margin="20dp"/>

    <!--Transportation-->
    <android.support.v7.widget.CardView
        android:id="@+id/transportationCategory"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/round_commute_black_36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transportation"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!-- Grocery -->
    <android.support.v7.widget.CardView
        android:id="@+id/groceriesCategory"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/round_local_grocery_store_black_36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groceries"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!-- Liqour -->
    <android.support.v7.widget.CardView
        android:id="@+id/liquorCategory"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/round_local_bar_black_36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liquor"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!-- Restaurant -->
    <android.support.v7.widget.CardView
        android:id="@+id/restaurantsCetegory"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/round_local_dining_black_36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurants"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!-- Clothing -->
    <android.support.v7.widget.CardView
        android:id="@+id/clothingCategory"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/round_store_mall_directory_black_36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clothing"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/otherCategory"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:src="@drawable/round_help_outline_black_36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/cancelCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="CANCEL"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#912e40"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>