<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddExpense"
    android:background="@drawable/image5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="#70355663">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/gradient2"
            android:padding="25dp"
            android:layout_margin="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Expense"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-condensed"
                android:textSize="40dp"/>

            <!-- Date Input -->
            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/addexpense_roundedcorners">

                <TextView
                    android:id="@+id/transDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:clickable="true"
                    android:drawableLeft="@drawable/calendar"
                    android:drawablePadding="15dp"
                    android:text="@string/txtDate"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />

            </LinearLayout>

            <!-- Category selection -->
            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/addexpense_roundedcorners">

                <TextView
                    android:id="@+id/transCat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:drawableLeft="@drawable/dollar"
                    android:drawablePadding="15dp"
                    android:text="@string/txtCategory"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />

            </LinearLayout>

            <!-- Amount input -->
            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/addexpense_roundedcorners">


                <EditText
                    android:id="@+id/transAmt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:drawableLeft="@drawable/dollar"
                    android:drawablePadding="15dp"
                    android:hint="@string/txtAmt"
                    android:inputType="numberDecimal"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:textSize="20dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:background="@drawable/addexpense_roundedcorners"
                android:text="Add" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>